syntax = "proto3";
option go_package = "github.com/argoproj/argo/pkg/apiclient/sensor";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";

package sensor;

message ListSensorsRequest {
    k8s.io.apimachinery.pkg.apis.meta.v1.ListOptions listOptions = 1;
}

message ListSensorsResponse {
    k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;
    repeated google.protobuf.Struct items = 2;
}

service SensorService {
    rpc ListSensors (ListSensorsRequest) returns (ListSensorsResponse) {
        option (google.api.http).get = "/api/v1/sensors";
    }
}